--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "cd backend && npm start",
+    "build": "react-scripts build && (cd backend && npm install)",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-client":"react-scripts start"
   },
   "eslintConfig": {
     "extends": [
